--- a/index.html
+++ b/index.html
@@ -28,18 +28,29 @@
     <div id="content-wrapper">
       <div class="inner clearfix">
         <section id="main-content">
-          <h2>
-<a name="python-class" class="anchor" href="#python-class"><span class="octicon octicon-link"></span></a>Python Class</h2>
+          <h1>
+<a name="python-class" class="anchor" href="#python-class"><span class="octicon octicon-link"></span></a>Python Class</h1>
+
+<p>Port of Google Python Class to IPython notebook. Start reading it from here - <a href="http://tooblippe.github.io/python_class/">http://tooblippe.github.io/python_class/</a></p>
+
+<h2>
+<a name="python-class-1" class="anchor" href="#python-class-1"><span class="octicon octicon-link"></span></a>Python Class</h2>
 
 <p>Welcome to Google's Python Class -- this is a free class for people with a little bit of programming experience who want to learn Python. The class includes written materials, lecture videos, and lots of code exercises to practice Python coding. These materials are used within Google to introduce Python to people who have just a little programming experience. The first exercises work on basic Python concepts like strings and lists, building up to the later exercises which are full programs dealing with text files, processes, and http connections. The class is geared for people who have a little bit of programming experience in some language, enough to know what a "variable" or "if statement" is. Beyond that, you do not need to be an expert programmer to use this material.</p>
 
-<p>To get started, the Python sections are linked at the left -- Python Set Up to get Python installed on your machine, Python Introduction for an introduction to the language, and then Python Strings starts the coding material, leading to the first exercise. The end of each written section includes a link to the code exercise for that section's material. The lecture videos parallel the written materials, introducing Python, then strings, then first exercises, and so on. At Google, all this material makes up an intensive 2-day class, so the videos are organized as the day-1 and day-2 sections.</p>
+<p>To get started, the Python sections are linked below -- Python Set Up to get Python installed on your machine, Python Introduction for an introduction to the language, and then Python Strings starts the coding material, leading to the first exercise. The end of each written section includes a link to the code exercise for that section's material. The lecture videos parallel the written materials, introducing Python, then strings, then first exercises, and so on. At Google, all this material makes up an intensive 2-day class, so the videos are organized as the day-1 and day-2 sections.</p>
 
 <p>This material was created by Nick Parlante working in the engEDU group at Google. Special thanks for the help from my Google colleagues John Cox, Steve Glassman, Piotr Kaminksi, and Antoine Picard. And finally thanks to Google and my director Maggie Johnson for the enlightened generosity to put these materials out on the internet for free under the under the Creative Commons Attribution 2.5 license -- share and enjoy!</p>
 
 <p>Tip: Check out the Python Google Code University Forum to ask and answer questions.</p>
 
 <p>Except as otherwise noted, the content of this page is licensed under the Creative Commons Attribution 3.0 License, and code samples are licensed under the Apache 2.0 License. For details, see our Site Policies.</p>
+
+<h2>
+<a name="about-this-port" class="anchor" href="#about-this-port"><span class="octicon octicon-link"></span></a>About this port</h2>
+
+<p>The original work was transfered to IPython noebooks as an expirement. The IPython notebooks in the '/src' directory should be used to interactively work through these classes.
+The rendered IPython notebooks are also available via the IPython notebook viewer at - [link] </p>
 
 <h2>
 <a name="contents" class="anchor" href="#contents"><span class="octicon octicon-link"></span></a>Contents</h2>
